examples/modules/expected/0742-modules-namespaced-only-bare-const-not-visible.stderr
error: array dimension must be a compile-time integer constant
  --> examples/modules/0742-modules-namespaced-only-bare-const-not-visible.sx:13:12
   |
13 |     arr : [DEP_LEN]i32 = ---;
   |            ^^^^^^^
